Tweaks to avoid drastic contrasts in color pallette

--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,8 @@
   background: linear-gradient(
     to right,
     red,
-    #f06d06,
-    rgb(255, 255, 0),
-    green
+    grey,
+    white
   );
   padding: 5px;
   margin: 5px;
@@ -34,7 +33,14 @@
 }
 
 .main-nav li {
-  background: conic-gradient(red, yellow, lime, aqua, blue, magenta, red);
+  background: linear-gradient(
+    to right,
+    red,
+    grey,
+    white
+  );
+  color: black;
+  font-weight: 800;
   text-decoration: none;
   font-size: 20px;
   padding: 5px;
@@ -56,7 +62,7 @@
   text-decoration: none;
   font-size: 16px;
   font-weight: 800;
-  background-color: blue;
+  background-color: red;
   color: white;
   padding: 5px;
   margin: 5px;
@@ -67,7 +73,7 @@
 }
 
 .comp li:nth-child(even) {
-  background-color: red;
+  background-color: black;
 }
 
 a,
@@ -85,11 +91,16 @@ a:visited {
 }
 
 .intro-text {
-  color: white;
-  border: solid 8px grey;
+  color: black;
+  border: solid 8px black;
   border-radius: 10px;
   padding: 15px;
-  background-color: black;
+  background: linear-gradient(
+    to right,
+    grey,
+    red,
+    grey
+  );
 }
 
 .biopic {
